fix for the jumping search icon

--- a/assets/less/flyout.less
+++ b/assets/less/flyout.less
@@ -115,6 +115,7 @@
         
         #flyout_search_toggle {
           position: absolute;
+          right: -1px;// fix for border of input
         }
       }
       
